<resources>
    <string name="app_name">TaskAppDraft</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="start">Start</string>
    <string name="add">Add</string>
    <string name="number">Number</string>
    <string name="verify">Verify</string>

</resources>