<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_item"
        android:src="@drawable/ic_item_board"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp"/>

    <TextView
        android:id="@+id/tv_item_title"
        android:textSize="32sp"
        android:textColor="@color/purple_200"
        android:text="@string/title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/img_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_item_desc"
        android:textSize="28sp"
        android:textColor="@color/purple_200"
        android:text="@string/description"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/btn_item"
        android:backgroundTint="@color/black"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>